--- a/Homework 8/data_engineering.ipynb
+++ b/Homework 8/data_engineering.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "4  USC00519397  2010-01-06   NaN    73"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "4  USC00519397  2010-01-06  0.04902    73"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
        "4      306.6  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,28 +332,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 2 - Database Engineering\n",
+    "## Step 2 - Database Engineering\n",
     "\n",
-    "Use SQLAlchemy to model your table schemas and create a sqlite database for your tables. You will need one table for measurements and one for stations.\n",
-    "\n",
-    "\n",
-    "Create a Jupyter Notebook called database_engineering.ipynb and use this to complete all of your Database Engineering work.\n",
-    "Use Pandas to read your cleaned measurements and stations CSV data.\n",
-    "Use the engine and connection string to create a database called hawaii.sqlite.\n",
-    "\n",
-    "Use declarative_base and create ORM classes for each table.\n",
-    "\n",
-    "\n",
-    "You will need a class for Measurement and for Station.\n",
-    "Make sure to define your primary keys.\n",
-    "\n",
-    "\n",
-    "Once you have your ORM classes defined, create the tables in the database using create_all.\n"
+    " - Use SQLAlchemy to model your table schemas and create a sqlite database for your tables. You will need one table for measurements and one for stations.\n",
+    " - Create a Jupyter Notebook called database_engineering.ipynb and use this to complete all of your Database Engineering work.\n",
+    " - Use Pandas to read your cleaned measurements and stations CSV data.\n",
+    " - Use the engine and connection string to create a database called hawaii.sqlite.\n",
+    " - Use declarative_base and create ORM classes for each table.\n",
+    " - You will need a class for Measurement and for Station.\n",
+    " - Make sure to define your primary keys.\n",
+    " - Once you have your ORM classes defined, create the tables in the database using create_all.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +425,7 @@
        "immutabledict({'station': Table('station', MetaData(bind=None), Column('id', Integer(), table=<station>, primary_key=True, nullable=False), Column('station', String(length=255), table=<station>), Column('name', String(length=255), table=<station>), Column('latitude', Float(), table=<station>), Column('longitude', Float(), table=<station>), Column('elevation', Float(), table=<station>), schema=None), 'measurements': Table('measurements', MetaData(bind=None), Column('id', Integer(), table=<measurements>, primary_key=True, nullable=False), Column('station', String(length=255), table=<measurements>), Column('date', DateTime(), table=<measurements>), Column('prcp', Float(), table=<measurements>), Column('tobs', Integer(), table=<measurements>), schema=None)})"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +455,7 @@
        "[]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,16 +466,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# engine.execute('drop table measurements')"
+    "# engine.execute('drop table station')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +484,7 @@
        "['measurements', 'station']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 59,
    "metadata": {
     "scrolled": true
    },
@@ -1513,7 +1506,7 @@
        " ...]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1525,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1542,7 +1535,7 @@
        " (8, 'USC00516128', 'MANOA LYON ARBO 785.2, HI US', 21.3331, -157.8025, 152.4)]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1551,6 +1544,13 @@
     "S_DF.to_sql('station', con=engine, if_exists= 'append', chunksize= 10, index_label= 'id')\n",
     "engine.execute(\"SELECT * FROM station\").fetchall()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
